alterações no layout

--- a/index.html
+++ b/index.html
@@ -74,58 +74,74 @@
             <ul class="eventos__lista">
                 <li class="eventos__item">
                     <img src="./assets/img/evento-1.png" alt="Velas em fundo preto.">
-                    <h3>Festival das Luzes</h3>
-                    <h4>14/08/22</h4>
-                    <h5>São Paulo | SP</h5>
+                    <div class="item__descricao">
+                        <h3>Festival das Luzes</h3>
+                        <h4>14/08/22</h4>
+                        <h5>São Paulo | SP</h5>
+                    </div>
                     <button>Ver</button>
                 </li>
                 <li class="eventos__item">
-                    <img src="./assets/img/evento-2.png" alt="Pessoas em uma festa">
-                    <h3>Festa Latina</h3>
-                    <h4>14/08/22</h4>
-                    <h5>São Paulo | SP</h5>
+                    <img src="./assets/img/evento-2.png" alt="Velas em fundo preto.">
+                    <div class="item__descricao">
+                        <h3>Festival das Luzes</h3>
+                        <h4>14/08/22</h4>
+                        <h5>São Paulo | SP</h5>
+                    </div>
                     <button>Ver</button>
                 </li>
                 <li class="eventos__item">
-                    <img src="./assets/img/evento-3.png" alt="Sala de cinema">
-                    <h3>Festival de Cinema</h3>
-                    <h4>14/08/22</h4>
-                    <h5>São Paulo | SP</h5>
+                    <img src="./assets/img/evento-3.png" alt="Velas em fundo preto.">
+                    <div class="item__descricao">
+                        <h3>Festival das Luzes</h3>
+                        <h4>14/08/22</h4>
+                        <h5>São Paulo | SP</h5>
+                    </div>
                     <button>Ver</button>
                 </li>
                 <li class="eventos__item">
-                    <img src="./assets/img/evento-4.png" alt="Corrida de bicicleta">
-                    <h3>Corrida pela Saúde</h3>
-                    <h4>14/08/22</h4>
-                    <h5>São Paulo | SP</h5>
+                    <img src="./assets/img/evento-4.png" alt="Velas em fundo preto.">
+                    <div class="item__descricao">
+                        <h3>Festival das Luzes</h3>
+                        <h4>14/08/22</h4>
+                        <h5>São Paulo | SP</h5>
+                    </div>
                     <button>Ver</button>
                 </li>
                 <li class="eventos__item">
-                    <img src="./assets/img/evento-5.png" alt="Pikachu gigante">
-                    <h3>Feira de animes</h3>
-                    <h4>14/08/22</h4>
-                    <h5>São Paulo | SP</h5>
+                    <img src="./assets/img/evento-5.png" alt="Velas em fundo preto.">
+                    <div class="item__descricao">
+                        <h3>Festival das Luzes</h3>
+                        <h4>14/08/22</h4>
+                        <h5>São Paulo | SP</h5>
+                    </div>
                     <button>Ver</button>
                 </li>
                 <li class="eventos__item">
-                    <img src="./assets/img/evento-6.png" alt="Show a céu aberto">
-                    <h3>Festival Multicores</h3>
-                    <h4>14/08/22</h4>
-                    <h5>São Paulo | SP</h5>
+                    <img src="./assets/img/evento-6.png" alt="Velas em fundo preto.">
+                    <div class="item__descricao">
+                        <h3>Festival das Luzes</h3>
+                        <h4>14/08/22</h4>
+                        <h5>São Paulo | SP</h5>
+                    </div>
                     <button>Ver</button>
                 </li>
                 <li class="eventos__item">
-                    <img src="./assets/img/evento-7.png" alt="Festival de balões">
-                    <h3>Dia de Balonismo</h3>
-                    <h4>14/08/22</h4>
-                    <h5>São Paulo | SP</h5>
+                    <img src="./assets/img/evento-7.png" alt="Velas em fundo preto.">
+                    <div class="item__descricao">
+                        <h3>Festival das Luzes</h3>
+                        <h4>14/08/22</h4>
+                        <h5>São Paulo | SP</h5>
+                    </div>
                     <button>Ver</button>
                 </li>
                 <li class="eventos__item">
-                    <img src="./assets/img/evento-8.png" alt="Sala de cinema">
-                    <h3>Quinta 3D</h3>
-                    <h4>14/08/22</h4>
-                    <h5>São Paulo | SP</h5>
+                    <img src="./assets/img/evento-8.png" alt="Velas em fundo preto.">
+                    <div class="item__descricao">
+                        <h3>Festival das Luzes</h3>
+                        <h4>14/08/22</h4>
+                        <h5>São Paulo | SP</h5>
+                    </div>
                     <button>Ver</button>
                 </li>
                 <li class="eventos__botao"><button>Ver mais</button></li>
